# covenant-vault-research

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  ARCHITECTURE.md  DESIGN.md  Dockerfile  Makefile  README.md  REFERENCES.md  RESEARCH-LOG.md  TODO.md  context.md  docker-compose.yml  entrypoint.sh  setup-context.md  switch-node.sh
Thesis/: FRAMING-STRATEGY.md  NOVELTY-ANALYSIS.md  VTthesis.cls  references.bib  thesis.aux  thesis.bbl  thesis.blg  thesis.fdb_latexmk  thesis.fls  thesis.ilg  thesis.lof  thesis.lot  thesis.out  thesis.tex  thesis.toc  thesis.xdv  thesis_ithenticate.aux  thesis_ithenticate.lof  thesis_ithenticate.lot  thesis_ithenticate.out  thesis_ithenticate.tex  thesis_ithenticate.toc
conference/: AXES.md  FRAMING-CHANGES.md  FRAMING-GUIDE.md  README.md  SUBMISSION-STRATEGY.md  (+1 more)
vault-comparison/: analyze_results.py  config.py  config.toml  pyproject.toml  run.py  run_fee_analysis.py  run_full.sh  test_opvault_adapter.py
vault-comparison/adapters/: __init__.py  base.py  cat_csfs_adapter.py  ccv_adapter.py  ctv_adapter.py  opvault_adapter.py  simplicity_adapter.py
vault-comparison/experiments/: exp_address_reuse.py  exp_cat_csfs_cold_key_recovery.py  exp_cat_csfs_destination_lock.py  exp_cat_csfs_hot_key_theft.py  exp_cat_csfs_witness_manipulation.py  exp_ccv_edge_cases.py  exp_ccv_mode_bypass.py  exp_fee_pinning.py  exp_fee_sensitivity.py  exp_lifecycle_costs.py  exp_multi_input.py  exp_opvault_recovery_auth.py  exp_opvault_trigger_key_theft.py  exp_recovery_griefing.py  exp_revault_amplification.py  exp_watchtower_exhaustion.py  experiment_base.py
vault-comparison/harness/: __init__.py  metrics.py  regtest_caveats.py  report.py  rpc.py  sweep_table.py
vault-comparison/scripts/: sweep_variants.py  test_variants.py
vault-comparison/tests/: conftest.py  test_config.py  test_fee_sensitivity_constants.py  test_harness.py  test_integration.py  test_lifecycle.py  test_logging.py  test_registry.py
vault-comparison/tests/fixtures/: record.py
(+97 files in other folders)
