[project]
name = "vault-comparison"
version = "0.1.0"
description = "Comparative analysis framework for Bitcoin covenant vault designs"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ctv = [
    "python-bitcoinlib",
    "clii",
    "buidl @ git+https://github.com/buidl-bitcoin/buidl-python.git",
]
ccv = [
    "python-dotenv",
    "prompt-toolkit",
]
opvault = [
    "verystable @ git+https://github.com/jamesob/verystable",
    "bip32",
    "clii",
    "rich",
]
cat_csfs = [
    "python-bitcoinlib",
    "clii",
    "buidl @ git+https://github.com/buidl-bitcoin/buidl-python.git",
]
all = [
    "python-bitcoinlib",
    "clii",
    "buidl @ git+https://github.com/buidl-bitcoin/buidl-python.git",
    "python-dotenv",
    "prompt-toolkit",
    "verystable @ git+https://github.com/jamesob/verystable",
    "bip32",
    "rich",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a running Bitcoin node (deselect with '-m not integration')",
]

[tool.setuptools.packages.find]
include = ["harness*", "adapters*", "experiments*"]

[project.scripts]
vault-compare = "run:main"
